Update URLController.java